person corrected to presonsat yaml file, get request is working and personsController is trimmed
